# fastapi-app

./: pyproject.toml
app/: api_models.py  db_models.py  main.py  pre_start.py  users_crud.py  utils.py
app/api/: main.py
app/api/routes/: auth.py  users.py
app/core/: config.py  database.py  security.py
