[tool.poetry]
name = "meetup"
version = "0.1.0"
description = ""
authors = ["Sielei Herman <hsielei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
tenacity = "^8.3.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
